Changed all usages of Paths.get to Path.of