@@ -6,7 +6,7 @@ import org.apache.commons.io.FileUtils;
 import java.io.File;
 import java.io.IOException;
 import java.net.URL;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class CurseAddon {
     private static final int CONNECTION_TIMEOUT = 10000;
@@ -37,7 +37,7 @@ public class CurseAddon {
 
     public void download(String destinationPath) throws IOException {
         String folderName = fileName.endsWith(".zip") ? "resourcepacks" : "mods";
-        File destinationFile = Paths.get(destinationPath, folderName, fileName).toFile();
+        File destinationFile = Path.of(destinationPath, folderName, fileName).toFile();
         FileUtils.copyURLToFile(downloadUrl, destinationFile, CONNECTION_TIMEOUT, CONNECTION_TIMEOUT);
     }
 }
